Add opendoc